# mumps_mex

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: mumps.cpp
